<resources>
    <string name="app_name">Bus timetable</string>
    <string name="app_name_full">Bus timetable in Lida</string>
    <string name="btn_routes">Routes</string>
    <string name="btn_favorites">Favorites</string>
    <string name="btn_findbytext">Stations</string>
    <string name="btn_findbygps">Map</string>
    <string name="btn_exit">Exit</string>
    <string name="about_menu">About</string>
    <string name="back_menu">Back</string>
    <string name="about_e_mail" translatable="false">e-mail: vlad.kornev@tut.by</string>
    <string name="stations">Stations</string>
    <string name="form_caption_shedule">Shedule</string>
    <string name="dialog_set_reminder">Reminder</string>
    <string name="dialog_message">Left: %1$d h. %2$d min.</string>
    <string name="dialog_message_left">The bus left...</string>
    <string name="add_menu">To favorites</string>
    <string name="toast_addtofavorites">%1$s station added to favorites.</string>
    <string name="toast_removefromfavorites">%1$s station removed from favorites.</string>
    <string name="list_empty_stations">No stations</string>
    <string name="list_empty_reminders">No reminders</string>
    <string name="btn_reminders">Reminders</string>
    <string name="hint_findbyname">Enter the name</string>
    <string name="city">Lida</string>
    <string name="map_mylocation">I\'m here</string>
    <string name="map_route">Route N:</string>
    <string name="about_version" translatable="false">ver. %1$s</string>
    <string name="about_copyright" translatable="false">© Vlad Kornev, %1$s</string>
    <string name="reminder_note">Note</string>
    <string name="reminder_date">Date</string>
    <string name="reminder_time">Time</string>
    <string name="reminder_periodicity">Periodicity</string>
    <string name="reminder_monday">Mon</string>
    <string name="reminder_tuesday">Tue</string>
    <string name="reminder_wednesday">Wed</string>
    <string name="reminder_thursday">Thu</string>
    <string name="reminder_friday">Fri</string>
    <string name="reminder_saturday">Sat</string>
    <string name="reminder_sunday">Sun</string>
    <string name="reminder_datetime">Remind me on %1$s at %2$s</string>
    <string name="reminder_spectime">Specify time</string>
    <string name="reminder_specdate">Specify date</string>
    <string name="reminder_daily">daily</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="notification_caption">Route: %1$s  %2$s</string>
    <string name="notification_text">Station: %1$s</string>
    <string name="reminder_error">The date must be greater than the current date!</string>
    <string name="reminder_setdatetimeerror">Date and time are not defined!</string>
    <string name="reminder_delete">Delete this reminder?</string>
    <string name="route_transfer">"Transfer: "</string>
    <string name="day_menu">Day of the week</string>
    <string name="toast_workingdays">Working days.</string>
    <string name="toast_weekend">Weekend.</string>
    <string name="about_readme">"- article 219 of the \"Rules for the Automobile Transport of Passengers\" allows deviation from the traffic schedule -3 + 5 minutes; \n- for a stowaway - a fine of 0.5 base amount;\n- reference schedules for all stops of urban passenger transport by phone 114;\n- when buying travel coupons from the bus driver, please do this only at the stopping points and give money without surrender;\n- branch Lida Bus Station No. 2 \"in agreement with the district executive committee has the right to make changes to the timetable with subsequent information in the district newspaper."</string>
    <string name="about_readmecaption">Additional information:</string>
    <string name="list_empty_shedule">Today there is no bus.</string>
    <string name="about_rate">Rate app</string>
</resources>
