<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/main_button_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/main_button_margin"
    tools:context="com.example.valdizz.busstation.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRoutes"
            style="@style/MainButtonStyle"
            android:onClick="onClickRoutes"
            android:text="@string/btn_routes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFavourites"
            style="@style/MainButtonStyle"
            android:onClick="onClickFavoritesStations"
            android:text="@string/btn_favourites" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFindByName"
            style="@style/MainButtonStyle"
            android:onClick="onClickFoundStations"
            android:text="@string/btn_findbytext" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFindByGps"
            style="@style/MainButtonStyle"
            android:onClick="onClickMapStations"
            android:text="@string/btn_findbygps" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAlerts"
            style="@style/MainButtonStyle"
            android:onClick="onClickReminders"
            android:text="@string/btn_reminders" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnExit"
            style="@style/MainButtonStyle"
            android:onClick="onClickExit"
            android:text="@string/btn_exit" />
    </LinearLayout>
</LinearLayout>
