<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.valdizz.busstation.ReminderSettingsActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRouteNumReminder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@drawable/main_item_num"
            android:gravity="center"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="@dimen/main_item_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/main_item"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                android:id="@+id/tvRouteNameReminder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:paddingLeft="3dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="@dimen/main_item_text_size_small" />

            <TextView
                android:id="@+id/tvStationNameReminder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="3dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="@dimen/main_item_text_size" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/tvReminderDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="17dp"
                android:text="@string/reminder_date"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/etReminderDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_item"
                android:drawableRight="@android:drawable/ic_menu_my_calendar"
                android:gravity="center_vertical"
                android:onClick="onReminderDateClick"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/main_item_text_size" />

            <TextView
                android:id="@+id/tvReminderTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:text="@string/reminder_time"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/etReminderTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_item"
                android:drawableRight="@android:drawable/ic_menu_week"
                android:gravity="center_vertical"
                android:onClick="onReminderTimeClick"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/main_item_text_size" />

            <TextView
                android:id="@+id/tvReminderPeriodicity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:text="@string/reminder_periodicity"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_item"
                android:orientation="horizontal"
                android:padding="5dp">

                <CheckBox
                    android:id="@+id/chkMonday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center"
                    android:onClick="onClickCheckBox"
                    android:text="@string/reminder_monday" />

                <CheckBox
                    android:id="@+id/chkTuesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center"
                    android:onClick="onClickCheckBox"
                    android:text="@string/reminder_tuesday" />

                <CheckBox
                    android:id="@+id/chkWednesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center"
                    android:onClick="onClickCheckBox"
                    android:text="@string/reminder_wednesday" />

                <CheckBox
                    android:id="@+id/chkThursday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center"
                    android:onClick="onClickCheckBox"
                    android:text="@string/reminder_thursday" />

                <CheckBox
                    android:id="@+id/chkFriday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center"
                    android:onClick="onClickCheckBox"
                    android:text="@string/reminder_friday" />

                <CheckBox
                    android:id="@+id/chkSaturday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center"
                    android:onClick="onClickCheckBox"
                    android:text="@string/reminder_saturday" />

                <CheckBox
                    android:id="@+id/chkSunday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center"
                    android:onClick="onClickCheckBox"
                    android:text="@string/reminder_sunday" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvReminderNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:text="@string/reminder_note"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/etReminderNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_item"
                android:padding="10dp"
                android:text="" />
        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvReminderDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_item_num"
                android:gravity="center_vertical"
                android:minHeight="40dp"
                android:text=""
                android:textColor="@color/colorBlue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickCancel"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/btnOk"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickOk"
                android:text="@android:string/ok" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
