<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_routes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.valdizz.busstation.RoutesActivity">

    <include layout="@layout/toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/lvRoutes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu_fab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu_animationDelayPerItem="50"
            app:menu_backgroundColor="@android:color/transparent"
            app:menu_buttonSpacing="0dp"
            app:menu_colorNormal="@color/colorMainGreen"
            app:menu_colorPressed="@color/colorMainDarkGreen"
            app:menu_colorRipple="@android:color/black"
            app:menu_fab_size="normal"
            app:menu_labels_colorNormal="@color/colorMainGreen"
            app:menu_labels_colorPressed="@color/colorMainDarkGreen"
            app:menu_labels_colorRipple="@android:color/black"
            app:menu_labels_cornerRadius="3dp"
            app:menu_labels_ellipsize="none"
            app:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            app:menu_labels_margin="0dp"
            app:menu_labels_maxLines="-1"
            app:menu_labels_position="left"
            app:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            app:menu_labels_showShadow="true"
            app:menu_labels_singleLine="false"
            app:menu_labels_textColor="@android:color/black"
            app:menu_labels_textSize="14sp"
            app:menu_openDirection="up"
            app:menu_shadowColor="#66000000"
            app:menu_shadowRadius="4dp"
            app:menu_shadowXOffset="1dp"
            app:menu_shadowYOffset="3dp"
            app:menu_showShadow="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_reminders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_recent_history"
                app:fab_colorNormal="@color/colorMainGreen"
                app:fab_colorPressed="@color/colorMainDarkGreen"
                app:fab_colorRipple="@android:color/black"
                app:fab_label="@string/btn_reminders"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_mapmode"
                app:fab_colorNormal="@color/colorMainGreen"
                app:fab_colorPressed="@color/colorMainDarkGreen"
                app:fab_colorRipple="@android:color/black"
                app:fab_label="@string/btn_findbygps"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_stations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_search"
                app:fab_colorNormal="@color/colorMainGreen"
                app:fab_colorPressed="@color/colorMainDarkGreen"
                app:fab_colorRipple="@android:color/black"
                app:fab_label="@string/btn_findbytext"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_myplaces"
                app:fab_colorNormal="@color/colorMainGreen"
                app:fab_colorPressed="@color/colorMainDarkGreen"
                app:fab_colorRipple="@android:color/black"
                app:fab_label="@string/btn_favorites"
                app:fab_size="mini" />
        </com.github.clans.fab.FloatingActionMenu>

    </FrameLayout>
</LinearLayout>
